CSS fixes: set # of turn center aligned
https://trello.com/c/7sXHJZ3s

--- a/web/css/theme.css
+++ b/web/css/theme.css
@@ -34,11 +34,15 @@
 
 .myTableStyle table, th, td {
     border: 1px solid black;
-    /*text-align: center;*/
+
     min-width: 150px;
 }
 
 .myTableStyle {
     /*margin-left: 300px;*/
     width: 100%;
+}
+
+table.center{
+    text-align: center;
 }
